@@ -566,6 +566,8 @@ Asterisk Manager Interface
  * Added a new eventfilter option per user to allow whitelisting and blacklisting
    of events.
  * Added optional parkinglot variable for park command.
+ * Added ConnectedLineNum and ConnectedLineName headers to the output of Status
+   manager action.
 
 Channel Event Logging
 ---------------------
